--- a/meeting-notes/20181011.md
+++ b/meeting-notes/20181011.md
@@ -1,6 +1,6 @@
 # Meeting 11 Oct 2018
 
-Zulip thread: [meeting 2018-10-11](https://rust-lang.zulipchat.com/#narrow/stream/136281-wg-unsafe-code-guidelines/subject/meeting.202018-10-11]
+Zulip thread: [meeting 2018-10-11](https://rust-lang.zulipchat.com/#narrow/stream/136281-wg-unsafe-code-guidelines/subject/meeting.202018-10-11)
 
 The main discussion was about how to finish up with the structs+tuples
 PR ([#31]). We opted to pull out several "unresolved questions" into
